# language-guidelines

./: README.md
python/file-structures/fast-api-postgres/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
python/file-structures/fast-api-postgres/gateways/: database.py
python/file-structures/fast-api-postgres/utils/: constants.py  erros.py  httpExceptions.py
python/load-test-scripts/user-load-test/: userLoadTest.py
python2/string-encoding/: notAscii.py  testStrings.py  unicode.py  utils.py
rust/file-structures/: README.md
rust/file-structures/actix-api/: .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile
rust/file-structures/actix-api/.cargo/: config
rust/file-structures/actix-api/src/: main.rs
rust/file-structures/actix-api/src/api/: task.rs
rust/file-structures/structure-rust-cargo/: Cargo.toml  readme-rust.md
rust/file-structures/structure-rust-cargo/src/: guessing_game.rs  main.rs  my_lib.rs  slices.rs  structs.rs  variables.rs
